--- a/src/i4004-asm/CMakeLists.txt
+++ b/src/i4004-asm/CMakeLists.txt
@@ -1,1 +1,7 @@
-add_executable(i4004-asm main.c lexer.c parser.c string.c symtbl.c codegen.c section.c list_head.c linker.c)
+add_executable(i4004-asm main.c
+        lexer.c parser.c
+        string.c symtbl.c
+        codegen.c section.c
+        list_head.c linker.c
+        error.c
+)
